sort of fixing footer overlap

--- a/src/app/devices/device/device.component.css
+++ b/src/app/devices/device/device.component.css
@@ -1,5 +1,5 @@
 mat-card {
-  width: 80vw;
+  width: 80%;
   max-width: 400px;
   margin: 1em;
   display: inline-block;
