--- a/src/app/devices/weather-card/weather-card.component.scss
+++ b/src/app/devices/weather-card/weather-card.component.scss
@@ -24,6 +24,3 @@ mat-card::ng-deep.mat-card-header-text {
   font-size: 30px;
 }
 
-.image {
-  height: 100px;
-}
