--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,14 +1,11 @@
-.spacer {
-  flex-shrink: 1;
-  flex-grow: 1;
-  flex-basis: auto;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 .mat-toolbar {
   background-color: lightgrey;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
   width: 100%;
   font-size: medium;
 }
